# macroreader

./: README.md  platformio.ini
.github/workflows/: papers3-release.yml
resources/: chars_input.txt
scripts/: generate_fonts.ps1  generate_hyphenation_test_data.py
scripts/generate_simplefont/: cli.py  writer.py
src/: main.cpp
src/content/css/: CssParser.cpp  CssStyle.h
src/content/epub/: EpubReader.cpp  EpubReader.h  epub_parser.c  epub_parser.h
src/content/providers/: EpubWordProvider.cpp  EpubWordProvider.h  FileWordProvider.cpp  FileWordProvider.h  StringWordProvider.cpp  StringWordProvider.h  WordProvider.h
src/content/xml/: SimpleXmlParser.cpp  SimpleXmlParser.h
src/core/: BatteryMonitor.cpp  Buttons.cpp  EInkDisplay.cpp  EInkDisplay.h  ImageDecoder.cpp  ImageDecoder.h  SDCardManager.cpp  SDCardManager.h  Settings.cpp  Settings.h
src/lib/: arduino_file.cpp  miniz.cpp  miniz.h
src/rendering/: SimpleFont.cpp  SimpleFont.h  TextRenderer.cpp  TrueTypeRenderer.cpp  TrueTypeRenderer.h
src/resources/fonts/: Bookerly26.h  Bookerly26Bold.h  Bookerly26BoldItalic.h  Bookerly26Italic.h  FontDefinitions.cpp  FontDefinitions.h  FontManager.cpp  FontManager.h
src/text/hyphenation/: EnglishHyphenation.cpp  EnglishHyphenation.h  GermanHyphenation.cpp  HyphenationStrategy.cpp  HyphenationStrategy.h
src/text/layout/: GreedyLayoutStrategy.cpp  GreedyLayoutStrategy.h  KnuthPlassLayoutStrategy.cpp  KnuthPlassLayoutStrategy.h  LayoutStrategy.cpp  LayoutStrategy.h
src/ui/: UIManager.cpp  UIManager.h
src/ui/screens/: ClockSettingsScreen.cpp  ClockSettingsScreen.h  FileBrowserScreen.cpp  FontSelectScreen.cpp  FontSelectScreen.h  SettingsScreen.cpp  SettingsScreen.h  TextViewerScreen.cpp  TextViewerScreen.h  TimezoneSelectScreen.cpp  TimezoneSelectScreen.h  WifiPasswordEntryScreen.h  (+5 more)
test/: CMakeLists.txt  TextLayoutPageRenderTest.cpp  test_config.h
test/common/: test_config.h  test_factory.h  test_globals.h  test_utils.cpp  test_utils.h
test/mocks/: SD.h  WString.h
test/resources/: english_hyphenation_tests.txt
test/scripts/: run_tests.ps1
test/unit/epub/: EpubReaderTest.cpp
test/unit/hyphenation/: EnglishHyphenationTest.cpp  GermanHyphenationEvaluationTest.cpp  HyphenationEvaluationTest.cpp
test/unit/layout/: GreedyLayoutBidirectionalParagraphTest.cpp  TextLayoutPageRenderTest.cpp
test/unit/parsing/: SimpleXmlParserRoundTripTest.cpp  SimpleXmlParserTest.cpp  XhtmlToTxtConversionTest.cpp
test/unit/wordprovider/: FileWordProviderNavigationTest.cpp  WordProviderSeekTest.cpp  WordProviderTest.cpp
(+36 files in other folders)
